fix(block): Fix content spacing. #5898

--- a/src/components/block/block.scss
+++ b/src/components/block/block.scss
@@ -142,6 +142,11 @@ calcite-handle {
   grid-area: control;
 }
 
+.content--spaced {
+  padding-block: var(--calcite-block-padding, theme("spacing.2"));
+  padding-inline: var(--calcite-block-padding, theme("spacing[2.5]"));
+}
+
 calcite-action-menu {
   grid-area: menu;
 }
